add oauth2 client scope api
